# zomi-syl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml  publish-pypi.yml  publishpypi.yml  train_crf.yml
Developer/Adding_New_Models_(Backends)/: index.html
Developer/Adding_Tagset_and_Feature_Template_to_crf/: index.html
Developer/CHANGELOG_template/: index.html
Developer/Developer_Guide_for_Adding_New_Backends/: index.html
Developer/New_Backend_Template/: index.html
Developer/Public_Backend_Loader/: index.html
Developer/Recommended_Folder_Structure/: index.html
Developer/Template_Test_Backend/: index.html
Developer/Test_CLI_Commands/: index.html
Developer/Test_CRF_Backend/: index.html
Developer/Test_Rule_Backend/: index.html
Developer/Test_Syllabify_Integration/: index.html
Developer/UMS_Implementation/: index.html
Developer/Unified_Metadata_Schema_(UMS)_v1.0/: index.html
about/About_Zomi-Syl/: index.html
changelog/RELEASE_CHECKLIST_v0.1.0/: index.html
docs/: BI-based_Zomi_Syllabification.md  Backends_Tagset_Info.md  Infra_Maintainers_Guide.md  Linguistic_Contributors_Guide.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v0.1.0.md  Recommended_Folder_Structure.md  Top_Level_Commands_v0.1.0.md  index.md
docs/Developer/: Adding_New_Models_(Backends).md  Adding_Tagset_and_Feature_Template_to_crf.md  CHANGELOG_template.md  Developer_Guide_for_Adding_New_Backends.md  New_Backend_Template.md  Public_Backend_Loader.md  Template_Test_Backend.md  Test_CLI_Commands.md  Test_CRF_Backend.md  Test_Rule_Backend.md  Test_Syllabify_Integration.md  UMS_Implementation.md  Unified_Metadata_Schema_(UMS)_v1.0.md
docs/about/: About_Zomi-Syl.md
docs/changelog/: RELEASE_CHECKLIST_v0.1.0.md
docs/reference/: BI-based_Zomi_Syllabification.md  Backends_Tagset_Info.md  Top_Level_Commands_v0.1.0.md
docs/user/: benchmarking.md  cli_reference.md  dialect_profiles.md  installation.md  quick_start.md
guides/Infra_Maintainers_Guide/: index.html
guides/Linguistic_Contributors_Guide/: index.html
guides/RELEASE_CHECKLIST/: index.html
reference/BI-based_Zomi_Syllabification/: index.html
reference/Backends_Tagset_Info/: index.html
reference/Top_Level_Commands_v0.1.0/: index.html
scripts/: audit_dataset.py  check_syllable_boundaries.py  clean_dataset.py  evaluate_crf.py  features.py  generate_changelog.py  get_golden_crf_frozen_data.py  get_zomi_syllabified_human.py  google_sheet_reader.py  help-cli.sh  help-devs.sh  predict.py  release_crf_freeze.sh  stats.py  train_crf.py  validate.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/zomi_syl/: api.py  (+7 more)
tests/: test_backend_detection.py  test_crf_consistency.py  test_crf_regression.py
(+82 files in other folders)
