[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zomi-syl"
version = "0.1.0"
description = "A modular, dialect-aware Zomi syllabification library with rule-based and CRF backends."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "ZomiLearner" }
]

keywords = [
    "bilstm", "crf", "dialect", "fst", "gangte", 
    "india-zomi", "kom", "linguistics", "myanmar-zomi", 
    "nlp", "paite", "phonology", "simte", "syllabification", 
    "tedim", "thado/thadou", "thangkhal", "transformer", 
    "vaiphei", "zo/zou", "zomi", "zomi-community"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "joblib",
    "numpy>=1.24",
    "regex>=2023.0",
    "pydantic>=2.0",
    "huggingface_hub>=0.23",
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "ipython",
    "jupyter",
]

train = [
    "datasets>=2.18",
]

fst = [
    "openfst-python>=1.8",
]

torch = [
    "torch>=2.2",
]

all = [
    "openfst-python>=1.8",
    "torch>=2.2",
]

[project.urls]
Homepage = "https://github.com/ZomiLearner/zomi-syl"
Documentation = "https://ZomiLearner.github.io/zomi-syl"
Source = "https://github.com/ZomiLearner/zomi-syl"
Issues = "https://github.com/ZomiLearner/zomi-syl/issues"
Changelog = "https://ZomiLearner.github.io/zomi-syl/changelog/"

[project.scripts]
zomi-syl = "zomi_syl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["zomi_syl*"]
exclude = ["training*", "scripts*", "tests*", "notebooks*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"zomi_syl" = [
    "resources/*.json",
    "models/**/*.joblib",
    "models/**/*.json",
    "models/**/*.txt",
    "config/*.toml",
    "config/*.json",
    "profiles/*/*.json",
    "profiles/*/*.txt",
    "rule_based/*.py"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--disable-warnings --maxfail=1"
